# image-customizer

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  vercel.json
public/: ai-worker.js
public/wasm/: imageforge_wasm.d.ts  imageforge_wasm.js  imageforge_wasm_bg.wasm  imageforge_wasm_bg.wasm.d.ts  package.json
rust-processor/: Cargo.toml
rust-processor/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/1/: page.tsx
src/app/2/: page.tsx
src/app/3/: page.tsx
src/app/4/: page.tsx
src/app/5/: page.tsx
src/components/: DesignNav.tsx  DropZone.tsx  Editor.tsx  ResultBar.tsx
src/lib/: aiWorker.ts  imageProcessor.ts  imageProcessorTypes.ts  storage.ts  wasmLoader.ts  wasmWorker.ts
